feat(database): Tab ui created for database page
Created shareable tabpaper component, added converter to russian language breadcrumb

#WFM-7

--- a/src/app/style/global.css
+++ b/src/app/style/global.css
@@ -68,3 +68,11 @@ span {
     font-size: var(--span-size-md);
   }
 }
+
+/* LIB-STYLES */
+.ant-breadcrumb {
+  margin: 0 0 16px 0;
+  .ant-breadcrumb-link {
+    color: grey;
+  }
+}
