--- a/src/widgets/Sidebar/ui/style.css
+++ b/src/widgets/Sidebar/ui/style.css
@@ -1,9 +1,10 @@
 #sidebar {
   .sidebar-content {
+    position: sticky;
+    top: 0;
     background: var(--sidebar-bg);
     box-shadow: var(--box-shadow-1);
     min-height: 100dvh;
-    max-height: max-content;
     padding: 18px 0 18px 18px;
     .logo {
       margin: 20px auto;
@@ -26,6 +27,7 @@
         justify-content: flex-start;
         gap: 13px;
         padding: 8px 0 8px 20px;
+        border-radius: 2px 0 0 2px;
         img {
           width: 16px;
           height: 16px;
