--- a/src/app/style/global.css
+++ b/src/app/style/global.css
@@ -15,6 +15,8 @@ html {
 /* VARIABLES */
 :root {
   --color-primary: rgba(54, 105, 232, 1);
+  --color-secondary: rgba(28, 62, 102, 1);
+  --color-table-head: rgba(100, 116, 139, 1);
   --color-primary-hover: rgba(210, 223, 255, 0.52);
   --color-success: rgba(33, 161, 104, 1);
   --body-bg: whitesmoke;
